Correcting spelling errors, completiting initial word lists

--- a/public/gcintranet/samples/basic-settings-fr.html
+++ b/public/gcintranet/samples/basic-settings-fr.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>basic-settings-fr</title>
+		<title>Exemple SGDC - Paramètres de base</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="La Boîte à outils de l’expérience Web (BOEW) rassemble différents composants réutilisables et prêts-à-utiliser pour la conception et la mise à jour de sites Web innovateurs qui sont à la fois accessibles, conviviaux et interopérables. Tous ces composants réutilisables sont des logiciels libres mis à la disposition des ministères et des collectivités Web externes.">
@@ -57,7 +57,7 @@
             <p>Cet exemple de page fournit des informations pour configurer les éléments de base de votre page.</p>
             <h2>Date modifiée</h2>
             <p>La date de modification est affichée en bas de la page, au-dessus du pied de page.</p>
-            <p>Ceci est configuré dans la section <b>preFooter</b> de votre page.</p>
+            <p>Ceci est configuré dans la section <code>preFooter</code> de votre page.</p>
             <pre>
 defPreFooter.outerHTML = wet.builder.preFooter({
 ...
@@ -67,7 +67,7 @@ defPreFooter.outerHTML = wet.builder.preFooter({
             </pre>
             <h2>Identifiant d'écran</h2>
             <p>L'identifiant d'écran s'affiche en bas de la page. Cet élément sert un identifiant unique pour votre page et peut être utilisé pour faciliter la communication entre les utilisateurs et le centre de services / l'équipe de support afin d'identifier l'emplacement exact d'un utilisateur dans votre application.</p>
-            <p>Ceci est configuré dans la section <b>preFooter</b> de votre page.</p>
+            <p>Ceci est configuré dans la section <code>preFooter</code> de votre page.</p>
             <pre>
 defPreFooter.outerHTML = wet.builder.preFooter({
 ...
@@ -77,7 +77,7 @@ defPreFooter.outerHTML = wet.builder.preFooter({
             </pre>
             <h2>Identifiant de version</h2>
             <p>L'identifiant de version est affiché en bas de la page, au-dessus du pied de page.</p>
-            <p>Ceci est configuré dans la section <b>preFooter</b> de votre page.</p>
+            <p>Ceci est configuré dans la section <code>preFooter</code> de votre page.</p>
             <pre>
 defPreFooter.outerHTML = wet.builder.preFooter({
 ...
