--- a/public/gcintranet/samples/breadcrumbs-fr.html
+++ b/public/gcintranet/samples/breadcrumbs-fr.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>breadcrumbs-fr</title>
+		<title>Exemple SGDC - Fil d’Ariane</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="La Boîte à outils de l’expérience Web (BOEW) rassemble différents composants réutilisables et prêts-à-utiliser pour la conception et la mise à jour de sites Web innovateurs qui sont à la fois accessibles, conviviaux et interopérables. Tous ces composants réutilisables sont des logiciels libres mis à la disposition des ministères et des collectivités Web externes.">
@@ -64,7 +64,7 @@
 			<h1 property="name" id="wb-cont">Fil d’Ariane</h1>
 			<p>Le fil d'Ariane est une liste de liens affichés près du haut du contenu pour aider l'utilisateur à déterminer où il se trouve sur le site et à l'aider à naviguer.</p>
 			<h2>Mise en oeuvre</h2>
-			<p>Le fil d'Ariane est ajouté dans la section <b>top</b> de la page. Il existe trois options de configuration:</p>
+			<p>Le fil d'Ariane est ajouté dans la section <code>top</code> de la page. Il existe trois options de configuration:</p>
             <ul>
                 <li><code class="wb-prettify">href</code>: l'url du lien. S'il est laissé vide, l'élément sera affiché sous forme de texte et non sous forme de lien hypertexte.</li>
                 <li><code class="wb-prettify">title</code>: le texte du lien qui s'affiche</li>
