--- a/public/gcintranet/samples/contactlinks-en.html
+++ b/public/gcintranet/samples/contactlinks-en.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>contactlinks-en</title>
+		<title>CDTS Sample - Contact Links</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
@@ -56,7 +56,7 @@
 			<h1 property="name" id="wb-cont">Contact Links</h1>
 			<p>The contact link variable will override the default "Contact Us" link located in the footer of your page. If no variable is specified then the default url will be used. You can change the text of the link as well. You also have the ability to add multiple links.</p>
 			<h2>Implementation</h2>
-			<p>The contact link is modified in the <b>footer</b> section of the page. You have two configuration options:</p>
+			<p>The contact link is modified in the <code>footer</code> section of the page. You have two configuration options:</p>
             <ul>
                 <li><code class="wb-prettify">"text"</code>: the display text of the link.</li>
                 <li><code class="wb-prettify">"href"</code>: the url of the link.</li>
