--- a/public/gcintranet/samples/contactlinks-fr.html
+++ b/public/gcintranet/samples/contactlinks-fr.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>contactlinks-fr</title>
+		<title>Exemple SGDC - Lien de contact</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="La Boîte à outils de l’expérience Web (BOEW) rassemble différents composants réutilisables et prêts-à-utiliser pour la conception et la mise à jour de sites Web innovateurs qui sont à la fois accessibles, conviviaux et interopérables. Tous ces composants réutilisables sont des logiciels libres mis à la disposition des ministères et des collectivités Web externes.">
@@ -56,7 +56,7 @@
 			<h1 property="name" id="wb-cont">Lien de contact</h1>
 			<p>La variable de lien de contact remplacera le lien par défaut « Contactez avec nous » situé dans le pied de page de votre page. Si aucune variable n'est spécifiée, l'URL par défaut sera utilisée. Vous pouvez également modifier le texte du lien. Vous avez également la possibilité d'ajouter plusieurs liens.</p>
 			<h2>Mise en oeuvre</h2>
-			<p>Le lien de contact est modifié dans la section <b>footer</b> de la page. Vous avez deux options de configuration:</p>
+			<p>Le lien de contact est modifié dans la section <code>footer</code> de la page. Vous avez deux options de configuration:</p>
             <ul>
                 <li><code class="wb-prettify">text</code>: le texte d'affichage du lien</li>
                 <li><code class="wb-prettify">href</code>: l'url du lien</li>
