--- a/public/gcintranet/samples/custom-menu-fr.html
+++ b/public/gcintranet/samples/custom-menu-fr.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>custom-menu-fr</title>
+		<title>Exemple SGDC - Menu personnalisé</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="La Boîte à outils de l’expérience Web (BOEW) rassemble différents composants réutilisables et prêts-à-utiliser pour la conception et la mise à jour de sites Web innovateurs qui sont à la fois accessibles, conviviaux et interopérables. Tous ces composants réutilisables sont des logiciels libres mis à la disposition des ministères et des collectivités Web externes.">
@@ -92,7 +92,7 @@
 			<p>Il existe deux méthodes par lesquelles un menu personnalisé peut être affiché.</p>
             <p><b>Première méthode</b></p>
             <ul>
-                <li>Créez un menu personnalisé dans un fichier html séparé et l'URL de fourniture via le paramètre <code>menuPath</code> dans la section <b>appTop</b> de votre page.</li>
+                <li>Créez un menu personnalisé dans un fichier html séparé et l'URL de fourniture via le paramètre <code>menuPath</code> dans la section <code>appTop</code> de votre page.</li>
                 <li>Un exemple de fichier html contenant un menu peut être trouvé <a href="../ajax/custommenu-fra.html">ici</a>.</li>
             </ul>
                 <pre>
@@ -103,9 +103,9 @@ defTop.outerHTML = wet.builder.appTop({
 });
                 </pre>
             <p><b>Deuxième méthode</b></p>
-            <p>La deuxième méthode consiste à créer le menu dans la section appTop de votre page. Il existe quelques options de configuration:</p>
+            <p>La deuxième méthode consiste à créer le menu dans la section <code>appTop</code> de votre page. Il existe quelques options de configuration:</p>
             <ul>
-                <li><code class="wb-prettify">menuLinks</code>: utilisé pour créer une navigation supérieure. Vous pouvez fournir le titre et l'URL via les paramètres «text» et «href» respectivement.</li>
+                <li><code class="wb-prettify">menuLinks</code>: utilisé pour créer une navigation supérieure. Vous pouvez fournir le titre et l'URL via les paramètres <code>text</code> et <code>href</code> respectivement.</li>
                 <pre>
 defTop.outerHTML = wet.builder.appTop({
 ...
@@ -117,7 +117,7 @@ defTop.outerHTML = wet.builder.appTop({
 ...
 });
                 </pre>
-                <li><code class="wb-prettify">subLinks</code>: utilisé pour créer les éléments de sous-menu. Ceux-ci sont affichés lorsque l'utilisateur survole la navigation supérieure. Vous pouvez fournir le titre et l'URL via les paramètres «subtext» et «subhref» respectivement.</li>
+                <li><code class="wb-prettify">subLinks</code>: utilisé pour créer les éléments de sous-menu. Ceux-ci sont affichés lorsque l'utilisateur survole la navigation supérieure. Vous pouvez fournir le titre et l'URL via les paramètres <code>subtext</code> et <code>subhref</code> respectivement.</li>
                 <pre>
 "subLinks": [{
     "subtext": "Sous-section 1",
