--- a/public/gcintranet/samples/gctoolsmodal-en.html
+++ b/public/gcintranet/samples/gctoolsmodal-en.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>gctoolsmodal-en</title>
+		<title>CDTS Sample - GC Tools Modal</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
@@ -59,7 +59,7 @@
 			<p>This sample page demonstrates how you can display a GCTools Modal that will contain the GC Tools links.</p>
 			<h2>Implementation</h2>
 			<p>By default, there are four GC Tools links that show in the header. You can replace all that with a single link to a modal dialog which will contain the GC Tools links instead.</p>
-			<p>This can be done through the <code>GCToolsModal</code> parameter in the <b>top</b> section of your page.</p>
+			<p>This can be done through the <code>GCToolsModal</code> parameter in the <code>top</code> section of your page.</p>
             <pre>
 document.write(wet.builder.top({
 ...
