--- a/public/gcintranet/samples/gctoolsmodal-fr.html
+++ b/public/gcintranet/samples/gctoolsmodal-fr.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>gctoolsmodal-fr</title>
+		<title>Exemple SGDC - GCTools</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="La Boîte à outils de l’expérience Web (BOEW) rassemble différents composants réutilisables et prêts-à-utiliser pour la conception et la mise à jour de sites Web innovateurs qui sont à la fois accessibles, conviviaux et interopérables. Tous ces composants réutilisables sont des logiciels libres mis à la disposition des ministères et des collectivités Web externes.">
@@ -56,10 +56,10 @@
 		</script>
 		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
 			<h1 property="name" id="wb-cont">Modal GCTools</h1>
-			<p>Cet exemple de page montre comment afficher un modal GC Tools contenant les liens GC Tools</p>
+			<p>Cet exemple de page montre comment afficher un modal contenant les liens GCTools</p>
 			<h2>Mise en œuvre</h2>
-			<p>Par défaut, quatre liens GC Tools s'affichent dans l'en-tête. Vous pouvez remplacer tout cela par un seul lien vers une boîte de dialogue modale qui contiendra les liens GC Tools à la place.</p>
-			<p>Cela peut être fait via le paramètre <code>GCToolsModal</code> dans la section <b>top</b> de votre page.</p>
+			<p>Par défaut, quatre liens GCTools s'affichent dans l'en-tête. Vous pouvez remplacer tout cela par un seul lien vers une boîte de dialogue modale qui contiendra les liens GCTools à la place.</p>
+			<p>Cela peut être fait via le paramètre <code>GCToolsModal</code> dans la section <code>top</code> de votre page.</p>
             <pre>
 document.write(wet.builder.top({
 ...
