--- a/public/gcintranet/samples/secure-en.html
+++ b/public/gcintranet/samples/secure-en.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>secure-en</title>
+		<title>CDTS Sample - Secure (Lock) Icon</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
@@ -55,7 +55,7 @@
 			<h1 property="name" id="wb-cont">Secure (Lock) Icon</h1>
 			<p>CDTS offers you the ability to display a lock icon beside the application name.</p>
             <h2>Implementation</h2>
-            <p>The lock icon is added in the <b>appTop</b> section of the page. Simply set <code>secure</code> to true.</p>
+            <p>The lock icon is added in the <code>appTop</code> section of the page. Simply set <code>secure</code> to true.</p>
             <pre>
 defTop.outerHTML = wet.builder.appTop({
 ...
