--- a/public/gcintranet/samples/signout-fr.html
+++ b/public/gcintranet/samples/signout-fr.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>signout-fr</title>
+		<title>Exemple SGDC - Bouton Fermer la session</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="La Boîte à outils de l’expérience Web (BOEW) rassemble différents composants réutilisables et prêts-à-utiliser pour la conception et la mise à jour de sites Web innovateurs qui sont à la fois accessibles, conviviaux et interopérables. Tous ces composants réutilisables sont des logiciels libres mis à la disposition des ministères et des collectivités Web externes.">
@@ -55,7 +55,7 @@
 			<h1 property="name" id="wb-cont">Bouton de déconnexion</h1>
 			<p>Cet exemple de page explique comment implémenter un bouton de déconnexion.</p>
             <h2>Mise en oeuvre</h2>
-            <p>Le bouton de déconnexion est ajouté dans la section <b>appTop</b> de la page.</p>
+            <p>Le bouton de déconnexion est ajouté dans la section <code>appTop</code> de la page.</p>
             <p>Vous pouvez fournir l'URL vers laquelle vous souhaitez rediriger l'utilisateur via le paramètre <code>href</code></p>
             <pre>
 defTop.outerHTML = wet.builder.appTop({
