--- a/public/gcintranet/samples/subtheme-en.html
+++ b/public/gcintranet/samples/subtheme-en.html
@@ -78,11 +78,11 @@
 		</script>
 		<main property="mainContentOfPage" class="container">
 			<h1 property="name" id="wb-cont">Sub-theme</h1>
-			<p>In your GCIntranet site, you have the ability to apply a subtheme. This allows you to have a custom look while still having the benefits of CDTS.</p>
-			<p>For this sample page, the ESDC subtheme is being applied. If you would like to have a custom look, please contact the CDTS team.</p>
+			<p>In your GCIntranet site, you have the ability to apply a sub-theme. This allows you to have a custom look while still having the benefits of CDTS.</p>
+			<p>For this sample page, the ESDC sub-theme is being applied. If you would like to have a custom look, please contact the CDTS team.</p>
             <h2>Implementation</h2>
-            <p>In order to implement the custom subTheme, you have to add the <code>subTheme</code> variable to various sections of the page. We are using "esdc" as an example.</p>
-            <b>refTop</b>
+            <p>In order to implement the custom sub-theme, you have to add the <code>subTheme</code> variable to various sections of the page. We are using <code>"esdc"</code> as an example.</p>
+            <code>refTop</code>
             <pre>
 document.write(wet.builder.refTop({
 ...
@@ -90,7 +90,7 @@ document.write(wet.builder.refTop({
 ...
 }));
             </pre>
-            <b>top</b>
+            <code>top</code>
             <pre>
 document.write(wet.builder.top({
 ...
@@ -98,7 +98,7 @@ document.write(wet.builder.top({
 ...
 }));
             </pre>
-            <b>footer</b>
+            <code>footer</code>
             <pre>
 document.write(wet.builder.footer({
 ...
