--- a/public/gcweb/samples/basic-settings-en.html
+++ b/public/gcweb/samples/basic-settings-en.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>basic-settings-en</title>
+		<title>CDTS Sample - Basic Settings</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
@@ -59,7 +59,7 @@
             <p>This sample page provides information to configure the basic items on your page.</p>
             <h2>Date Modified</h2>
             <p>The date modified is displayed near the bottom of the page, above the footer.</p>
-            <p>This is configured in the <b>preFooter</b> section of your page.</p>
+            <p>This is configured in the <code>preFooter</code> section of your page.</p>
             <pre>
 defPreFooter.outerHTML = wet.builder.preFooter({
 ...
@@ -69,7 +69,7 @@ defPreFooter.outerHTML = wet.builder.preFooter({
             </pre>
             <h2>Screen Identifier</h2>
             <p>The Screen Identifier is displayed near the bottom of the page. This element serves a unique identifier for your page and can be used to help communication between users and the service desk/support team to identify the location exact location of a user in your application.</p>
-            <p>This is configured in the <b>preFooter</b> section of your page.</p>
+            <p>This is configured in the <code>preFooter</code> section of your page.</p>
             <pre>
 defPreFooter.outerHTML = wet.builder.preFooter({
 ...
@@ -79,7 +79,7 @@ defPreFooter.outerHTML = wet.builder.preFooter({
             </pre>
             <h2>Version Identifier</h2>
             <p>The version identifier is displayed near the bottom of the page, above the footer.</p>
-            <p>This is configured in the <b>preFooter</b> section of your page.</p>
+            <p>This is configured in the <code>preFooter</code> section of your page.</p>
             <pre>
 defPreFooter.outerHTML = wet.builder.preFooter({
 ...
