--- a/public/gcweb/samples/feedback-and-share-fr.html
+++ b/public/gcweb/samples/feedback-and-share-fr.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>feedback-and-share-fr</title>
+		<title>Exemple SGDC - Commentaires et partage</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="La Boîte à outils de l’expérience Web (BOEW) rassemble différents composants réutilisables et prêts-à-utiliser pour la conception et la mise à jour de sites Web innovateurs qui sont à la fois accessibles, conviviaux et interopérables. Tous ces composants réutilisables sont des logiciels libres mis à la disposition des ministères et des collectivités Web externes.">
@@ -60,7 +60,7 @@
 			<h2>Rétroaction</h2>
             <p>Spécifiez le bouton « Signaler un problème ou une erreur sur cette page » de votre page. Par défaut, ce bouton est affiché avec l'URL par défaut de Canada.ca. Vous pouvez personnaliser l'URL ou simplement masquer le bouton.</p>
             <h3>Mise en oeuvre</h3>
-            <p>Ce lien peut être personnalisé dans la section <b>preFooter</b> de votre page.</p>
+            <p>Ce lien peut être personnalisé dans la section <code>preFooter</code> de votre page.</p>
             <p>Cacher le bouton</p>
             <pre>
 defPreFooter.outerHTML = wet.builder.preFooter({
@@ -81,7 +81,7 @@ defPreFooter.outerHTML = wet.builder.preFooter({
             <h2>Partager</h2>
             <p>Le bouton « Partager cette page » est un moyen pour les utilisateurs de partager l'URL du site via les médias sociaux. Par défaut, ce bouton s'affiche avec la sélection par défaut des sites de réseaux sociaux. Vous pouvez personnaliser cette sélection ou simplement masquer le bouton.</p>
             <h3>Mise en oeuvre</h3>
-            <p>Ce bouton peut être personnalisé dans la section <b>preFooter</b> de votre page.</p>
+            <p>Ce bouton peut être personnalisé dans la section <code>preFooter</code> de votre page.</p>
             <p>Cacher le bouton</p>
             <pre>
 defPreFooter.outerHTML = wet.builder.preFooter({
