--- a/public/gcweb/samples/footer-en.html
+++ b/public/gcweb/samples/footer-en.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>footer-en</title>
+		<title>CDTS Sample - Footer</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
@@ -57,10 +57,10 @@
 		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
 			<h1 property="name" id="wb-cont">Footer</h1>
 			<p>As of v4.0.47, CDTS is implementing the latest version of the site footer provided by WET.</p>
-            <p>For more infomation, please visit the WET footer documentation <a href="https://wet-boew.github.io/GCWeb/sites/footers/footers-en.html">here.</a></p>
+            <p>For more information, please visit the WET footer documentation <a href="https://wet-boew.github.io/GCWeb/sites/footers/footers-en.html">here.</a></p>
 			<h2>Contextual Footer</h2>
 			<p>The contextual footer is hidden by default. Making the contextual footer visible is done via the <code class="wb-prettify">contextualFooter</code> parameter.</p>
-            <p>This is configured in the <b>footer</b> section of your page.</p>
+            <p>This is configured in the <code>footer</code> section of your page.</p>
             <ul>
                 <li><code class="wb-prettify">"title"</code>: the title of the contextual footer.</li>
                 <li><code class="wb-prettify">"text"</code>: the text of the link that is displayed.</li>
@@ -95,7 +95,7 @@ defFooter.outerHTML = wet.builder.footer({
             </pre>
             <h2>Main Footer</h2>
 			<p>The main footer is visible by default. You have the ability to hide the main footer via the <code class="wb-prettify">hideFooterMain</code> parameter.</p></p>
-            <p>This is configured in the <b>footer</b> section of your page.</p>
+            <p>This is configured in the <code>footer</code> section of your page.</p>
             <pre>
 defFooter.outerHTML = wet.builder.footer({
 ...
@@ -105,10 +105,10 @@ defFooter.outerHTML = wet.builder.footer({
             </pre>
             <h2>Sub Footer</h2>
             <p>The sub footer is visible by default. You have the option of hiding the first three links via the <code class="wb-prettify">hideFooterCorporate</code> parameter.</p>
-            <p>You also have the option of overwriting the href attribute of the Terms and conditions link via the <code class="wb-prettify">termsLink</code> parameter.</p>
-            <p>You also have the option of overwriting the href attribute of the Privacy link via the <code class="wb-prettify">privacyLink</code> parameter.</p>
+            <p>You also have the option of overwriting the <code>href</code> attribute of the Terms and conditions link via the <code class="wb-prettify">termsLink</code> parameter.</p>
+            <p>You also have the option of overwriting the <code>href</code> attribute of the Privacy link via the <code class="wb-prettify">privacyLink</code> parameter.</p>
             <p>You can open the custom Terms and Conditions/Privacy links in a new window via the <code class="wb-prettify">newWindow</code> parameter.</p>
-            <p>This is configured in the <b>footer</b> section of your page.</p>
+            <p>This is configured in the <code>footer</code> section of your page.</p>
 
             <pre>
 defFooter.outerHTML = wet.builder.footer({
