--- a/public/gcweb/samples/footer-fr.html
+++ b/public/gcweb/samples/footer-fr.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>footer-fr</title>
+		<title>Exemple SGDC - Pied de page</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="La Boîte à outils de l’expérience Web (BOEW) rassemble différents composants réutilisables et prêts-à-utiliser pour la conception et la mise à jour de sites Web innovateurs qui sont à la fois accessibles, conviviaux et interopérables. Tous ces composants réutilisables sont des logiciels libres mis à la disposition des ministères et des collectivités Web externes.">
@@ -59,7 +59,7 @@
 			<p>Pour plus d'informations, veuillez consulter la documentation du pied de page WET <a href="https://wet-boew.github.io/GCWeb/sites/footers/footers-fr.html">ici.</a></p>
 			<h2>Bande contextuelle</h2>
 			<p>La bande contextuelle est masqué par défaut. Rendre visible la bande contextuelle se fait via le paramètre <code class="wb-prettify">contextualFooter</code>.</p>
-            <p>Ceci est configuré dans la section <b>footer</b> de votre page.</p>
+            <p>Ceci est configuré dans la section <code>footer</code> de votre page.</p>
             <ul>
                 <li><code class="wb-prettify">"title"</code>: le titre de la bande contextuelle.</li>
                 <li><code class="wb-prettify">"text"</code>: le texte du lien affiché.</li>
@@ -94,7 +94,7 @@ defFooter.outerHTML = wet.builder.footer({
             </pre>
             <h2>La bande principale</h2>
             <p>La bande principale est visible par défaut. Vous avez la possibilité de masquer la bande principale via le paramètre <code class="wb-prettify">hideFooterMain</code>.</p></p>
-            <p>Ceci est configuré dans la section <b>footer</b> de votre page.</p>>
+            <p>Ceci est configuré dans la section <code>footer</code> de votre page.</p>>
             <pre>
 defFooter.outerHTML = wet.builder.footer({
 ...
@@ -104,10 +104,10 @@ defFooter.outerHTML = wet.builder.footer({
             </pre>
             <h2>La bande sous le pied de page</h2>
             <p>La bande sous le pied de page est visible par défaut. Vous avez la possibilité de masquer les trois premiers liens via le paramètre <code class="wb-prettify">hideFooterCorporate</code>.</p>
-            <p>Vous avez également la possibilité d'écraser l'attribut href du lien Avis via le paramètre <code class="wb-prettify">termsLink</code>.</p>
-            <p>Vous avez également la possibilité d'écraser l'attribut href du lien Confidentialité via le paramètre <code class="wb-prettify">privacyLink</code>.</p>
+            <p>Vous avez également la possibilité d'écraser l'attribut <code>href</code> du lien Avis via le paramètre <code class="wb-prettify">termsLink</code>.</p>
+            <p>Vous avez également la possibilité d'écraser l'attribut <code>href</code> du lien Confidentialité via le paramètre <code class="wb-prettify">privacyLink</code>.</p>
             <p>Vous pouvez ouvrir les liens personnalisés Avis/Confidentialité dans une nouvelle fenêtre via le paramètre <code class="wb-prettify">newWindow</code>.</p>
-            <p>Ceci est configuré dans la section <b>footer</b> de votre page.</p>
+            <p>Ceci est configuré dans la section <code>footer</code> de votre page.</p>
             <pre>
 defFooter.outerHTML = wet.builder.footer({
 ...
