--- a/public/gcweb/samples/jquery-en.html
+++ b/public/gcweb/samples/jquery-en.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>Content page - Canada.ca</title>
+		<title>CDTS Sample - Loading jQuery</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
@@ -60,7 +60,7 @@
 			<p>CDTS provides you with the option of how you would like to load jQuery. By default, jQuery is loaded locally from the WET build. However, you also have the option of loading jQuery from Google CDN</p>
 			<h2>Implementation</h2>
 			<p>You do not have to do anything if you would like to use the default option of loading jQuery from the WET build.</p>
-			<p>Loading jQuery from Google CDN is done through the <code>jQuery</code> parameter in the <b>refFooter</b> section of your page.</p>
+			<p>Loading jQuery from Google CDN is done through the <code>jQuery</code> parameter in the <code>refFooter</code> section of your page.</p>
             <pre>
 document.write(wet.builder.refFooter({
 ...
