--- a/public/gcweb/samples/jquery-fr.html
+++ b/public/gcweb/samples/jquery-fr.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>jQuery-fr.html</title>
+		<title>Exemple SGDC - Chargement de jQuery</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="La Boîte à outils de l’expérience Web (BOEW) rassemble différents composants réutilisables et prêts-à-utiliser pour la conception et la mise à jour de sites Web innovateurs qui sont à la fois accessibles, conviviaux et interopérables. Tous ces composants réutilisables sont des logiciels libres mis à la disposition des ministères et des collectivités Web externes.">
@@ -60,7 +60,7 @@
 			<p>SGDC vous offre la possibilité de charger jQuery. Par défaut, jQuery est chargé localement à partir de la version WET. Cependant, vous avez également la possibilité de charger jQuery à partir de Google CDN.</p>
 			<h2>Mise en oeuvre</h2>
 			<p>Vous n'avez rien à faire si vous souhaitez utiliser l'option par défaut de chargement de jQuery à partir de la version WET.</p>
-			<p>Le chargement de jQuery à partir de Google CDN se fait via le paramètre <code>jQuery</code> dans la section <b>refFooter</b> de votre page.</p>
+			<p>Le chargement de jQuery à partir de Google CDN se fait via le paramètre <code>jQuery</code> dans la section <code>refFooter</code> de votre page.</p>
             <pre>
 document.write(wet.builder.refFooter({
 ...
