--- a/public/gcweb/samples/splashpage.html
+++ b/public/gcweb/samples/splashpage.html
@@ -3,7 +3,7 @@
 <!--[if gt IE 8]><!--><html lang="en"><!--<![endif]-->
 	<head>
 		<meta charset="utf-8">
-		<title>Canada.ca</title>
+		<title>CDTS Sample - Splash Page</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<meta name="description" content="">
 		<meta name="description" lang="fr" content="">
