--- a/public/gcintranet/samples/custom-footer-en.html
+++ b/public/gcintranet/samples/custom-footer-en.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>custom-footer-en</title>
+		<title>CDTS Sample - Custom Footer</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
@@ -61,7 +61,7 @@
 			<h1 property="name" id="wb-cont">Custom Footer</h1>
 			<p>When using the application template, you have the ability to add a customized footer that will contain links of your choosing.</p>
             <h2>Implementation</h2>
-			<p>Customization of the footer is done through the <code>footerSections</code> parameter in the <b>appFooter</b> section of your page.</p>
+			<p>Customization of the footer is done through the <code>footerSections</code> parameter in the <code>appFooter</code> section of your page.</p>
             <ul>
                 <li><code class="wb-prettify">"href"</code>: the url of the link</li>
                 <li><code class="wb-prettify">"text"</code>: the text of the link that is displayed</li>
