--- a/public/gcintranet/samples/custom-footer-fr.html
+++ b/public/gcintranet/samples/custom-footer-fr.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>custom-footer-fr</title>
+		<title>Exemple SGDC - Pied de page personnalisé</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="La Boîte à outils de l’expérience Web (BOEW) rassemble différents composants réutilisables et prêts-à-utiliser pour la conception et la mise à jour de sites Web innovateurs qui sont à la fois accessibles, conviviaux et interopérables. Tous ces composants réutilisables sont des logiciels libres mis à la disposition des ministères et des collectivités Web externes.">
@@ -61,11 +61,11 @@
 			<h1 property="name" id="wb-cont">Pied de page personnalisé</h1>
 			<p>Lorsque vous utilisez le modèle d'application, vous avez la possibilité d'ajouter un pied de page personnalisé qui contiendra les liens de votre choix.</p>
             <h2>Mise en œuvre</h2>
-			<p>La personnalisation du pied de page se fait via le paramètre <code>footerSections</code> dans la section <b>appFooter</b> de votre page.</p>
+			<p>La personnalisation du pied de page se fait via le paramètre <code>footerSections</code> dans la section <code>appFooter</code> de votre page.</p>
             <ul>
                 <li><code class="wb-prettify">href</code>: l'url du lien</li>
                 <li><code class="wb-prettify">text</code>: le texte du lien qui s'affiche</li>
-                <li><code class="wb-prettify">newWindow</code>: Facultatif: défini sur true si vous souhaitez que le lien s'ouvre dans une nouvelle fenêtre</li>
+                <li><code class="wb-prettify">newWindow</code>: Facultatif: défini <code>true</code> si vous souhaitez que le lien s'ouvre dans une nouvelle fenêtre</li>
             </ul>
             <pre>
 defFooter.outerHTML = wet.builder.appFooter({
