--- a/public/gcintranet/samples/custom-search-en.html
+++ b/public/gcintranet/samples/custom-search-en.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>custom-search-en</title>
+		<title>CDTS Sample - Custom Search</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
@@ -72,7 +72,7 @@
 			<h1 property="name" id="wb-cont">Custom Search</h1>
 			<p>When using the application template, you have the ability to use a custom search engine for your site.</p>
             <h2>Implementation</h2>
-			<p>Customization of the search is done through the <code>customSearch</code> parameter in the <b>appTop</b> section of your page.</p>
+			<p>Customization of the search is done through the <code>customSearch</code> parameter in the <code>appTop</code> section of your page.</p>
             <p>There are a few configuration options:</p>
             <ul>
                 <li><code class="wb-prettify">"action"</code>: the URL of the search you would like to point to</li>
