--- a/public/gcintranet/samples/custom-search-fr.html
+++ b/public/gcintranet/samples/custom-search-fr.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>custom-search-fr</title>
+		<title>Exemple SGDC - Recherche personnalisée</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="La Boîte à outils de l’expérience Web (BOEW) rassemble différents composants réutilisables et prêts-à-utiliser pour la conception et la mise à jour de sites Web innovateurs qui sont à la fois accessibles, conviviaux et interopérables. Tous ces composants réutilisables sont des logiciels libres mis à la disposition des ministères et des collectivités Web externes.">
@@ -72,15 +72,15 @@
 			<h1 property="name" id="wb-cont">Recherche personnalisée</h1>
 			<p>Lorsque vous utilisez le modèle d'application, vous avez la possibilité d'utiliser un moteur de recherche personnalisé pour votre site.</p>
             <h2>Mise en oeuvre</h2>
-			<p>La personnalisation de la recherche se fait via le paramètre <code>customSearch</code> dans la section <b>appTop</b> de votre page.</p>
+			<p>La personnalisation de la recherche se fait via le paramètre <code>customSearch</code> dans la section <code>appTop</code> de votre page.</p>
             <p>Il existe quelques options de configuration:</p>
             <ul>
                 <li><code class="wb-prettify">action</code>: l'URL de la recherche vers laquelle vous souhaitez pointer</li>
-                <li><code class="wb-prettify">method</code>: « get » ou « post »</li>
+                <li><code class="wb-prettify">method</code>: <code>get</code> ou <code>post</code></li>
                 <li><code class="wb-prettify">placeholder</code>: Facultatif - texte d'espace réservé affiché dans la barre de recherche</li>
                 <li><code class="wb-prettify">id</code>: Facultatif - vous pouvez fournir un identifiant facultatif pour votre recherche</li>
-                <li><code class="wb-prettify">name</code>: Facultatif - vous pouvez personnaliser l'attribut « name » pour votre recherche</li>
-                <li><code class="wb-prettify">hiddenInput</code>: Facultatif - vous pouvez fournir des entrées de données via les paramètres « name » et « value »</li>
+                <li><code class="wb-prettify">name</code>: Facultatif - vous pouvez personnaliser l'attribut <code>name</code> pour votre recherche</li>
+                <li><code class="wb-prettify">hiddenInput</code>: Facultatif - vous pouvez fournir des entrées de données via les paramètres <code>name</code> et « value »</li>
             </ul>
             <pre>
 defTop.outerHTML = wet.builder.appTop({
