--- a/public/gcintranet/samples/global-nav-menu-en.html
+++ b/public/gcintranet/samples/global-nav-menu-en.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>global-nav-menu-en</title>
+		<title>CDTS Sample - Global Navigation Menu</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
@@ -59,7 +59,7 @@
 			<h1 property="name" id="wb-cont">Global Navigation Menu</h1>
 			<p>A global navigation menu is a global footer that can be displayed instead of the default footer.</p>
             <h2>Implementation</h2>
-            <p>The global navigation menu is added in the <b>appFooter</b> section of the page.</p>
+            <p>The global navigation menu is added in the <code>appFooter</code> section of the page.</p>
             <p>Simply set the <code>globalNav</code> variable to true.</p>
             <pre>
 defFooter.outerHTML = wet.builder.appFooter({
