--- a/public/gcintranet/samples/global-nav-menu-fr.html
+++ b/public/gcintranet/samples/global-nav-menu-fr.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>global-nav-menu-fr</title>
+		<title>Exemple SGDC - Menu de navigation globale</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="La Boîte à outils de l’expérience Web (BOEW) rassemble différents composants réutilisables et prêts-à-utiliser pour la conception et la mise à jour de sites Web innovateurs qui sont à la fois accessibles, conviviaux et interopérables. Tous ces composants réutilisables sont des logiciels libres mis à la disposition des ministères et des collectivités Web externes.">
@@ -59,8 +59,8 @@
 			<h1 property="name" id="wb-cont">Menu de navigation globale</h1>
 			<p>Un menu de navigation global est un pied de page global qui peut être affiché à la place du pied de page par défaut.</p>
             <h2>Mise en oeuvre</h2>
-            <p>Le menu de navigation global est ajouté dans la section <b>appFooter</b> de la page.</p>
-            <p>Définissez simplement la variable <code>globalNav</code> sur true.</p>
+            <p>Le menu de navigation global est ajouté dans la section <code>appFooter</code> de la page.</p>
+            <p>Définissez simplement la variable <code>globalNav: true</code>.</p>
             <pre>
 defFooter.outerHTML = wet.builder.appFooter({
 ...
