--- a/public/gcintranet/samples/index-fr.html
+++ b/public/gcintranet/samples/index-fr.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>Samples - home</title>
+		<title>Exemples - accueil</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="La Boîte à outils de l’expérience Web (BOEW) rassemble différents composants réutilisables et prêts-à-utiliser pour la conception et la mise à jour de sites Web innovateurs qui sont à la fois accessibles, conviviaux et interopérables. Tous ces composants réutilisables sont des logiciels libres mis à la disposition des ministères et des collectivités Web externes.">
@@ -62,7 +62,7 @@
 		</script>
 		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
 			<h1 property="name" id="wb-cont">Échantillons SGDC</h1>
-			<p>Bienvenue sur les pages d'exemple CDTS. Vous trouverez ci-dessous des liens vers des exemples de pages qui montrent comment implémenter diverses fonctionnalités CDTS, ainsi que des liens utiles.</p>
+			<p>Bienvenue sur les pages d'exemple SGDC. Vous trouverez ci-dessous des liens vers des exemples de pages qui montrent comment implémenter diverses fonctionnalités SGDC, ainsi que des liens utiles.</p>
 			<ul>
 				<li><a href="adobe-analytics-fr.html">Adobe Analytics</a></li>
 				<li><a href="basic-settings-fr.html">Paramètres de base</a></li>
@@ -77,8 +77,8 @@
 				<li><a href="sectionmenu-fr.html">Menu de section</a></li>
                 <li><a href="server-fr.html">Exemple d'erreur</a></li>
                 <li><a href="server.html">Échantillon bilingue d'erreur</a></li>
-                <li><a href="subtheme-fr.html">Sous-thème</a></li>
-				<li><a href="splashpage.html">Page splash</a></li>
+                <li><a href="subtheme-fr.html">Sous thème</a></li>
+				<li><a href="splashpage.html">Page d'accueil</a></li>
 				<li><a href="transactional-fr.html">Page transactionnelle</a></li>
             </ul>
             <h3>Gabarits d’application</h3>
@@ -87,7 +87,7 @@
                 <li><a href="custom-footer-fr.html">Pied de page personnalisé</a></li>
                 <li><a href="custom-search-fr.html">Recherche personnalisée</a></li>
                 <li><a href="global-nav-menu-fr.html">Menu de navigation globale</a></li>
-                <li><a href="secure-fr.html">Icône Secure (la serrure)</a></li>
+                <li><a href="secure-fr.html">Icône Sécure (la serrure)</a></li>
                 <li><a href="signin-fr.html">Ouvrir une session</a></li>
                 <li><a href="signout-fr.html">Fermer la session</a></li>
             </ul>
