--- a/public/gcintranet/samples/intranettitle-en.html
+++ b/public/gcintranet/samples/intranettitle-en.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>intranettitle-en</title>
+		<title>CDTS Sample - Intranet Title</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
@@ -61,7 +61,7 @@
 			<h1 property="name" id="wb-cont">Intranet Title</h1>
             <p>This sample page demonstrates how to display a custom intranet title. Before proceeding please ensure you have permission from your department, TBS or Principal Publisher. This variable does not conform to the C&IA specifications document. </p>
 			<h2>Implementation</h2>
-			<p>The GCIntranet title is modififed in the <b>top</b> section of the page. There are three configuration options:</p>
+			<p>The GCIntranet title is modified in the <code>top</code> section of the page. There are three configuration options:</p>
             <ul>
                 <li><code class="wb-prettify">"href"</code>: the url of the title. If left empty, the <a href="https://intranet.ec.gc.ca/default.asp?lang=En">default url</a> will be used.</li>
                 <li><code class="wb-prettify">"text"</code>: the text of the title that will be displayed</li>
