--- a/public/gcintranet/samples/intranettitle-fr.html
+++ b/public/gcintranet/samples/intranettitle-fr.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>intranettitle-fr</title>
+		<title>Exemple SGDC - Titre intranet</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="La Boîte à outils de l’expérience Web (BOEW) rassemble différents composants réutilisables et prêts-à-utiliser pour la conception et la mise à jour de sites Web innovateurs qui sont à la fois accessibles, conviviaux et interopérables. Tous ces composants réutilisables sont des logiciels libres mis à la disposition des ministères et des collectivités Web externes.">
@@ -61,7 +61,7 @@
 			<h1 property="name" id="wb-cont">Titre intranet</h1>
             <p>Cet exemple de page montre comment afficher un titre intranet personnalisé. Avant de continuer, assurez-vous d'avoir la permission de votre ministère, du SCT ou de l'éditeur principal. Cette variable n'est pas conforme au document de spécifications C&IA.</p>
 			<h2>Mise en œuvre</h2>
-			<p>Le titre GCIntranet est modifié dans la section <b>top</b> de la page. Il existe trois options de configuration:</p>
+			<p>Le titre GCIntranet est modifié dans la section <code>top</code> de la page. Il existe trois options de configuration:</p>
             <ul>
                 <li><code class="wb-prettify">href</code>: l'url du titre. Si elle est laissée vide, <a href="https://intranet.ec.gc.ca/default.asp?lang=En">l'URL par défaut</a> sera utilisée</li>
                 <li><code class="wb-prettify">text</code>: le texte du titre qui sera affiché</li>
