--- a/public/gcintranet/samples/languagelinks-en.html
+++ b/public/gcintranet/samples/languagelinks-en.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>languagelinks-en</title>
+		<title>CDTS Sample - Language Links</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
@@ -64,7 +64,7 @@
 			<h1 property="name" id="wb-cont">Language links</h1>
 			<p>Add a language link to switch between languages on your page. Although this is optional, it is usually mandatory to provide the language toggle link.</p>
 			<h2>Implementation</h2>
-			<p>Language links are added in the <b>top</b> section of the page. There are three configuration options:
+			<p>Language links are added in the <code>top</code> section of the page. There are three configuration options:
             <ul>
                 <li><code class="wb-prettify">"href"</code>: the url of the page in the other language.</li>
                 <li><code class="wb-prettify">"text"</code>: the text of the link that is displayed</li>
