--- a/public/gcintranet/samples/secure-fr.html
+++ b/public/gcintranet/samples/secure-fr.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>secure-fr</title>
+		<title>Exemple SGDC - Icône Sécure (la serrure)</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="La Boîte à outils de l’expérience Web (BOEW) rassemble différents composants réutilisables et prêts-à-utiliser pour la conception et la mise à jour de sites Web innovateurs qui sont à la fois accessibles, conviviaux et interopérables. Tous ces composants réutilisables sont des logiciels libres mis à la disposition des ministères et des collectivités Web externes.">
@@ -52,10 +52,10 @@
 			});
 		</script>
 		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
-			<h1 property="name" id="wb-cont">Icône Secure (la serrure)</h1>
+			<h1 property="name" id="wb-cont">Icône Sécure (la serrure)</h1>
 			<p>SGDC vous offre la possibilité d'afficher une icône de verrouillage à côté du nom de l'application.</p>
             <h2>Mise en œuvre</h2>
-            <p>L'icône de verrouillage est ajoutée dans la section <b>appTop</b> de la page. Définissez simplement <code>secure</code> sur true.</p>
+            <p>L'icône de verrouillage est ajoutée dans la section <code>appTop</code> de la page. Définissez simplement <code>secure: true</code>.</p>
             <pre>
 defTop.outerHTML = wet.builder.appTop({
 ...
