--- a/public/gcintranet/samples/signout-en.html
+++ b/public/gcintranet/samples/signout-en.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>signout-en</title>
+		<title>CDTS Sample - Sign out button</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
@@ -53,9 +53,9 @@
 		</script>
 		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
 			<h1 property="name" id="wb-cont">Sign out button</h1>
-			<p>This sample page will demontrate how to implement a sign out button.</p>
+			<p>This sample page will demonstrate how to implement a sign out button.</p>
             <h2>Implementation</h2>
-            <p>The sign out button is added in the <b>appTop</b> section of the page.</p>
+            <p>The sign out button is added in the <code>appTop</code> section of the page.</p>
             <p>You can provide the URL of where you want to redirect the user to, through the <code>href</code> parameter</p>
             <pre>
 defTop.outerHTML = wet.builder.appTop({
