--- a/public/gcintranet/samples/splashpage.html
+++ b/public/gcintranet/samples/splashpage.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>Language selection - GC Intranet / Sélection de la langue - Intranet du GC</title>
+		<title>CDTS Sample - Splash Page</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<meta name="description" content="Welcome page for the website - GC Intranet">
 		<meta name="description" lang="fr" content="Page d'accueil pour le site Web - Intranet du GC">
