--- a/public/gcintranet/samples/subtheme-eccc-fr.html
+++ b/public/gcintranet/samples/subtheme-eccc-fr.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-fr.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>Gabarit ECCC theme intranet</title>
+		<title>Gabarit ECCC thème intranet</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
@@ -95,9 +95,9 @@
 			});
 		</script>
 		<main property="mainContentOfPage" class="container">
-			<h1 property="name" id="wb-cont">Gabarit ECCC theme intranet</h1>
+			<h1 property="name" id="wb-cont">Gabarit ECCC thème intranet</h1>
 			<section>
-				<h2 class="wb-prettify all-pre"><em>var defTop</em> "top" <code>script</code> élément</h2>
+				<h2 class="wb-prettify all-pre"><code>var defTop</code> "top" <code>script</code> élément</h2>
 <pre class="prettyprint"><code>var defTop = document.getElementById("def-top");
 defTop.outerHTML = wet.builder.top({
     "cdnEnv": "prod",
