--- a/public/gcintranet/samples/subtheme-esdc-en.html
+++ b/public/gcintranet/samples/subtheme-esdc-en.html
@@ -79,7 +79,7 @@
 		<main property="mainContentOfPage" class="container">
 			<h1 property="name" id="wb-cont">ESDC intranet theme template</h1>
 			<section>
-				<h2 class="wb-prettify all-pre"><em>var defTop</em> "top" <code>script</code> element</h2>
+				<h2 class="wb-prettify all-pre"><code>var defTop</code> "top" <code>script</code> element</h2>
 <pre class="prettyprint"><code>var defTop = document.getElementById("def-top");
 defTop.outerHTML = wet.builder.top({
 	"cdnEnv": "prod",
