--- a/public/gcintranet/samples/subtheme-esdc-fr.html
+++ b/public/gcintranet/samples/subtheme-esdc-fr.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-fr.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>Gabarit EDSC theme intranet</title>
+		<title>Gabarit EDSC thème intranet</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="La Boîte à outils de l’expérience Web (BOEW) rassemble différents composants réutilisables et prêts-à-utiliser pour la conception et la mise à jour de sites Web innovateurs qui sont à la fois accessibles, conviviaux et interopérables. Tous ces composants réutilisables sont des logiciels libres mis à la disposition des ministères et des collectivités Web externes.">
@@ -77,9 +77,9 @@
 			});
 		</script>
 		<main property="mainContentOfPage" class="container">
-			<h1 property="name" id="wb-cont">Gabarit EDSC theme intranet</h1>
+			<h1 property="name" id="wb-cont">Gabarit EDSC thème intranet</h1>
 			<section>
-				<h2 class="wb-prettify all-pre"><em>var defTop</em> "top" <code>script</code> élément</h2>
+				<h2 class="wb-prettify all-pre"><code>var defTop</code> "top" <code>script</code> élément</h2>
 <pre class="prettyprint"><code>var defTop = document.getElementById("def-top");
 defTop.outerHTML = wet.builder.top({
 	"cdnEnv": "prod",
