--- a/public/gcintranet/samples/subtheme-ort-fr.html
+++ b/public/gcintranet/samples/subtheme-ort-fr.html
@@ -89,7 +89,7 @@
 		<main property="mainContentOfPage" class="container">
 			<h1 property="name" id="wb-cont">Gabarit application ORT</h1>
 			<section>
-				<h2 class="wb-prettify all-pre"><em>var defTop</em> "appTop" <code>script</code> élément</h2>
+				<h2 class="wb-prettify all-pre"><code>var defTop "appTop"</code> <code>script</code> élément</h2>
 <pre class="prettyprint"><code>var defTop = document.getElementById("def-top");
 defTop.outerHTML = wet.builder.appTop({
     "cdnEnv": "prod",
