--- a/public/gcweb/samples/adobe-analytics-en.html
+++ b/public/gcweb/samples/adobe-analytics-en.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>adobe-analytics-en</title>
+		<title>CDTS Sample - Adobe Analytics</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
@@ -69,10 +69,10 @@
 			<h1 property="name" id="wb-cont">Adobe Analytics</h1>
 			<p>This sample page demonstrates how you can incorporate Adobe Analytics into your web page.</p>
             <h2>Implementation</h2>
-            <p>Adobe Analytics is applied through the <code>webAnalytics</code> parameter. You will have a modification to make in the <b>refTop</b> section of your page depending on the environment.</p>
-            <p>You will also have to set <code>webAnalytics</code> to true in the <b>refFooter</b> section of your page.</p>
+            <p>Adobe Analytics is applied through the <code>webAnalytics</code> parameter. You will have a modification to make in the <code>refTop</code> section of your page depending on the environment.</p>
+            <p>You will also have to set <code>webAnalytics</code> to true in the <code>refFooter</code> section of your page.</p>
             <section>
-                <h3 class="wb-prettify all-pre"><em>document.write</em> "refTop" element</h3>
+                <h3 class="wb-prettify all-pre"><em>document.write</em> <code>refTop</code> element</h3>
                 <p>Using Adobe Analytics <em>version</em> <strong>1</strong> on <strong>staging</strong> <em>environment</em>.</p>
 <pre class="prettyprint"><code>document.write(wet.builder.refTop({
 	"webAnalytics" : [{
@@ -102,7 +102,7 @@
             </section>
 
 			<section>
-            	<h3 class="wb-prettify all-pre"><em>document.write</em> "refFooter" element</h3>
+            	<h3 class="wb-prettify all-pre"><em>document.write</em> <code>refFooter</code> element</h3>
 <pre class="prettyprint"><code>document.write(wet.builder.refFooter({
 	"webAnalytics" : true
 }));</code></pre>
