--- a/public/gcweb/samples/adobe-analytics-fr.html
+++ b/public/gcweb/samples/adobe-analytics-fr.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>adobe-analytics-fr</title>
+		<title>Exemple SGDC - Adobe Analytics</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="La Boîte à outils de l’expérience Web (BOEW) rassemble différents composants réutilisables et prêts-à-utiliser pour la conception et la mise à jour de sites Web innovateurs qui sont à la fois accessibles, conviviaux et interopérables. Tous ces composants réutilisables sont des logiciels libres mis à la disposition des ministères et des collectivités Web externes.">
@@ -69,31 +69,31 @@
 			<h1 property="name" id="wb-cont">Adobe Analytics</h1>
 			<p>Cet exemple de page montre comment incorporer Adobe Analytics dans votre page Web.</p>
             <h2>Mise en œuvre</h2>
-            <p>Adobe Analytics est appliqué via le paramètre <code>webAnalytics</code>. Vous aurez une modification à apporter dans la section <b>refTop</b> de votre page en fonction de l'environnement.</p>
-            <p>Vous devrez également définir <code>webAnalytics</code> sur true dans la section <b>refFooter</b> de votre page.</p>
+            <p>Adobe Analytics est appliqué via le paramètre <code>webAnalytics</code>. Vous aurez une modification à apporter dans la section <code>refTop</code> de votre page en fonction de l'environnement.</p>
+            <p>Vous devrez également définir <code>webAnalytics: true</code> dans la section <code>refFooter</code> de votre page.</p>
             <section>
-                <h3 class="wb-prettify all-pre"><em>document.write</em> "refTop" élément</h3>
-                <p>Utiliser Adobe Analytics <em>version</em> <strong>1</strong> sur l'<em>environnement</em> <strong>staging</strong>.</p>
+                <h3 class="wb-prettify all-pre"><code>document.write</code> <code>refTop</code> élément</h3>
+                <p>Utiliser Adobe Analytics <code>version</code> <strong>1</strong> sur l'<em>environnement</em> <code>staging</code>.</p>
 <pre class="prettyprint"><code>document.write(wet.builder.refTop({
 	"webAnalytics" : [{
 		"environment" : "staging",
 		"version" : 1
 	}]
 }));</code></pre>
-				<p>Utiliser Adobe Analytics <em>version</em> <strong>2</strong> sur l'<em>environnement</em> <strong>production</strong>.</p>
+				<p>Utiliser Adobe Analytics <code>version</code> <strong>2</strong> sur l'<em>environnement</em> <code>production</code>.</p>
 <pre class="prettyprint"><code>document.write(wet.builder.refTop({
 	"webAnalytics" : [{
 		"environment" : "production",
 		"version" : 2
 	}]
 }));</code></pre>
-				<p>Utiliser Adobe Analytics <em>version</em> <strong>3</strong> sur l'<strong>environnement</strong> <em>staging</em>.</p>
+				<p>Utiliser Adobe Analytics <code>version</code> <strong>3</strong> sur l'<strong>environnement</strong> <code>staging</code>.</p>
 <pre class="prettyprint"><code>document.write(wet.builder.refTop({
 	"webAnalytics" : [{
 		"custom" : "launch-EN11c0261481f74c56b7656937bbd995e9-staging.min.js"
 	}]
 }));</code></pre>
-				<p>Utiliser Adobe Analytics <em>version</em> <strong>3</strong> sur l'<strong>environnement</strong> <em>production</em>.</p>
+				<p>Utiliser Adobe Analytics <code>version</code> <strong>3</strong> sur l'<strong>environnement</strong> <code>production</code>.</p>
 <pre class="prettyprint"><code>document.write(wet.builder.refTop({
 	"webAnalytics" : [{
 		"custom" : "launch-EN0cf6c2810a2b48f8a4c36502a1b09541.min.js"
@@ -102,7 +102,7 @@
 			</section>
 
             <section>
-                <h3 class="wb-prettify all-pre"><em>document.write</em> "refFooter" élément</h3>
+                <h3 class="wb-prettify all-pre"><code>document.write</code> <code>refFooter</code> élément</h3>
 <pre class="prettyprint"><code>document.write(wet.builder.refFooter({
     "webAnalytics" : true
 }));</code></pre>
