--- a/public/gcweb/samples/breadcrumbs-en.html
+++ b/public/gcweb/samples/breadcrumbs-en.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>breadcrumbs-en</title>
+		<title>CDTS Sample - Breadcrumbs</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
@@ -66,7 +66,7 @@
 			<h1 property="name" id="wb-cont">Breadcrumbs</h1>
 			<p>The breadcrumbs are a list of links displayed near to the top of the content to help the user determine where they are on the site and to help them navigate.</p>
 			<h2>Implementation</h2>
-			<p>Breadcrumbs are added in the <b>top</b> section of the page. There are three configuration options:</p>
+			<p>Breadcrumbs are added in the <code>top</code> section of the page. There are three configuration options:</p>
             <ul>
                 <li><code class="wb-prettify">"href"</code>: the url of the link. If left empty, the item will be displayed in text and not as a hyperlink.</li>
                 <li><code class="wb-prettify">"title"</code>: the text of the link that is displayed</li>
