--- a/public/gcweb/samples/contactlinks-fr.html
+++ b/public/gcweb/samples/contactlinks-fr.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>contactlinks-fr</title>
+		<title>Exemple SGDC - Lien de contact</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="La Boîte à outils de l’expérience Web (BOEW) rassemble différents composants réutilisables et prêts-à-utiliser pour la conception et la mise à jour de sites Web innovateurs qui sont à la fois accessibles, conviviaux et interopérables. Tous ces composants réutilisables sont des logiciels libres mis à la disposition des ministères et des collectivités Web externes.">
@@ -58,7 +58,7 @@
 			<h1 property="name" id="wb-cont">Lien de contact</h1>
 			<p>La variable de lien de contact remplacera le lien par défaut «Contactez-nous» situé dans le pied de page de votre page. Si aucune variable n'est spécifiée, l'URL par défaut sera utilisée.</p>
 			<h2>Mise en œuvre</h2>
-			<p>Le lien de contact est modifié dans la section <b>pied de page</b> de la page. Seule l'option suivante est disponible:</p>
+			<p>Le lien de contact est modifié dans la section <code>pied de page</code> de la page. Seule l'option suivante est disponible:</p>
             <ul>
                 <li><code class="wb-prettify">href</code>: l'url du lien.</li>
             </ul>
