--- a/public/gcweb/samples/header-menu-en.html
+++ b/public/gcweb/samples/header-menu-en.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-        <title>header-menu-en</title>
+        <title>CDTS Sample - Header Menu</title>
         <meta content="width=device-width,initial-scale=1" name="viewport">
         <!-- Meta data -->
         <meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
@@ -78,7 +78,7 @@
             <h1 property="name" id="wb-cont">Header Menu</h1>
             <p>This sample page demonstrates how a header menu can be displayed on your page.</p>
             <h2>Implementation</h2>
-            <p>The menu is added in the <b>appTop</b> section of the page with the following configuration options:</p>
+            <p>The menu is added in the <code>appTop</code> section of the page with the following configuration options:</p>
             <ul>
                 <li><code class="wb-prettify">"text"</code>: (MANDATORY) - the text inside the menu</li>
                 <li><code class="wb-prettify">"link":"text"</code>: (MANDATORY) - the text of the link that is displayed</li>
