--- a/public/gcweb/samples/home-en.html
+++ b/public/gcweb/samples/home-en.html
@@ -97,7 +97,7 @@ defTop.outerHTML = wet.builder.top({
     </div>
     <div class="col-lg-4 col-md-6">
     <h3><a href="https://www.canada.ca/en/services/immigration-citizenship.html">Immigration and citizenship</a></h3>
-    <p>Visit, work, study, immigrate, refugees, permanant residents, apply, check status</p>
+    <p>Visit, work, study, immigrate, refugees, permanent residents, apply, check status</p>
     </div>
     <div class="col-lg-4 col-md-6">
     <h3><a href="https://travel.gc.ca">Travel and tourism</a></h3>
