--- a/public/gcweb/samples/home-fr.html
+++ b/public/gcweb/samples/home-fr.html
@@ -117,7 +117,7 @@ defTop.outerHTML = wet.builder.top({
     </div>
     <div class="col-lg-4 col-md-6">
     <h3><a href="https://www.canada.ca/fr/services/impots.html">Impôts</a></h3>
-    <p>Impôt sur le revenu, TPS/TVH, limites de contribution, credits d’impôt, organismes de charité </p>
+    <p>Impôt sur le revenu, TPS/TVH, limites de contribution, crédits d’impôt, organismes de charité </p>
     </div>
     <div class="col-lg-4 col-md-6">
     <h3><a href="https://www.canada.ca/fr/services/environnement.html">Environnement et ressources naturelles</a></h3>
@@ -177,7 +177,7 @@ defTop.outerHTML = wet.builder.top({
     <div class="col-lg-7 col-xs-12 col-md-6">
     <div class="wb-eqht row">
     <div class="col-lg-6">
-    <h3><a href="https://www.canada.ca/fr/contact.html">Contactez-nous</a></h3>
+    <h3><a href="https://www.canada.ca/fr/contact.html">Contactez nous</a></h3>
     <p>Coordonnées des ministères et des agences, changez votre adresse</p>
     </div>
     <div class="col-lg-6">
