--- a/public/gcweb/samples/index-fr.html
+++ b/public/gcweb/samples/index-fr.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>Samples - home</title>
+		<title>Exemples - Accueil</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
@@ -79,7 +79,7 @@
 				<li><a href="sectionmenu-fr.html">Menu de section</a></li>
                 <li><a href="server-fr.html">Exemple d'erreur</a></li>
                 <li><a href="server.html">Échantillon bilingue d'erreur</a></li>
-				<li><a href="splashpage.html">Page splash</a></li>
+				<li><a href="splashpage.html">Page d'accueil</a></li>
 				<li><a href="transactional-fr.html">Page transactionnelle</a></li>
             </ul>
             <h3>Gabarits d’application</h3>
