--- a/public/gcweb/samples/info-banner-en.html
+++ b/public/gcweb/samples/info-banner-en.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>info-banner-en</title>
+		<title>CDTS Sample - Information Banner</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
@@ -69,9 +69,9 @@
 		</script>
 		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
 			<h1 property="name" id="wb-cont">Information Banner</h1>
-			<p>This sample page will demontrate how to implement an information banner on top of the page.</p>
+			<p>This sample page will demonstrate how to implement an information banner on top of the page.</p>
             <h2>Implementation</h2>
-            <p>The banner is added in the <b>appTop</b> section of the page with the following configuration options:</p>
+            <p>The banner is added in the <code>appTop</code> section of the page with the following configuration options:</p>
             <ul>
                 <li><code class="wb-prettify">"mainHTML"</code>: the text you would like displayed in your custom banner.</li>
                 <li><code class="wb-prettify">"link":"text"</code>: the text of the link that is displayed.</li>
