--- a/public/gcweb/samples/info-banner-fr.html
+++ b/public/gcweb/samples/info-banner-fr.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>info-banner-fr</title>
+		<title>Exemple SGDC - Bannière d'information</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="La Boîte à outils de l’expérience Web (BOEW) rassemble différents composants réutilisables et prêts-à-utiliser pour la conception et la mise à jour de sites Web innovateurs qui sont à la fois accessibles, conviviaux et interopérables. Tous ces composants réutilisables sont des logiciels libres mis à la disposition des ministères et des collectivités Web externes.">
@@ -67,9 +67,9 @@
 			<h1 property="name" id="wb-cont">Bannière d'information</h1>
 			<p>Cet exemple de page montre comment implémenter une bannière d'information en haut de la page.</p>
             <h2>Mise en œuvre</h2>
-            <p>La bannière est ajoutée dans la section <b>appTop</b> de la page avec les options de configuration suivantes :</p>
+            <p>La bannière est ajoutée dans la section <code>appTop</code> de la page avec les options de configuration suivantes :</p>
             <ul>
-                <li><code class="wb-prettify">"mainHTML"</code>: the text you would like displayed in your custom banner.</li>
+                <li><code class="wb-prettify">"mainHTML"</code>: le texte à afficher.</li>
                 <li><code class="wb-prettify">"link":"text"</code>: le texte du lien affiché.</li>
                 <li><code class="wb-prettify">"link":"href"</code>: l'url du lien.</li>
                 <li><code class="wb-prettify">"link":"newWindow"</code>: ouvrir le lien dans une nouvelle fenêtre.</li>
