--- a/public/gcweb/samples/languagelinks-fr.html
+++ b/public/gcweb/samples/languagelinks-fr.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>languagelinks-en</title>
+		<title>Exemple SGDC - Liens linguistiques</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="La Boîte à outils de l’expérience Web (BOEW) rassemble différents composants réutilisables et prêts-à-utiliser pour la conception et la mise à jour de sites Web innovateurs qui sont à la fois accessibles, conviviaux et interopérables. Tous ces composants réutilisables sont des logiciels libres mis à la disposition des ministères et des collectivités Web externes.">
@@ -66,7 +66,7 @@
 			<h1 property="name" id="wb-cont">Liens linguistiques</h1>
 			<p>Ajoutez un lien de langue pour basculer entre les langues sur votre page. Bien que cela soit facultatif, il est généralement obligatoire de fournir le lien de bascule de langue.</p>
 			<h2>Mise en oeuvre</h2>
-			<p>Les liens linguistiques sont ajoutés dans la section <b>top</b> de la page. Il existe trois options de configuration:</p>
+			<p>Les liens linguistiques sont ajoutés dans la section <code>top</code> de la page. Il existe trois options de configuration:</p>
             <ul>
                 <li><code class="wb-prettify">href</code>: l'url de la page dans l'autre langue</li>
                 <li><code class="wb-prettify">text</code>: le texte du lien qui s'affiche</li>
