--- a/public/gcweb/samples/sectionmenu-en.html
+++ b/public/gcweb/samples/sectionmenu-en.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>sectionmenu-en</title>
+		<title>CDTS Sample - Section Menu</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
@@ -62,7 +62,7 @@
 					<p>This sample page demonstrates how the section (left) menu is displayed and configured.</p>
                     <h2>Implementation</h2>
                     <p>In order to implement a section menu, there are a few modifications required.</p>
-                    <p>In the <b>top</b> section, you need to set the parameter "topSecMenu" to true.</p>
+                    <p>In the <code>top</code> section, you need to set the parameter <code>topSecMenu</code> to true.</p>
                     <pre>
 defTop.outerHTML = wet.builder.top({
 ...
