--- a/public/gcweb/samples/sectionmenu-fr.html
+++ b/public/gcweb/samples/sectionmenu-fr.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>sectionmenu-fr</title>
+		<title>Exemple SGDC - Menu de section</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="La Boîte à outils de l’expérience Web (BOEW) rassemble différents composants réutilisables et prêts-à-utiliser pour la conception et la mise à jour de sites Web innovateurs qui sont à la fois accessibles, conviviaux et interopérables. Tous ces composants réutilisables sont des logiciels libres mis à la disposition des ministères et des collectivités Web externes.">
@@ -62,7 +62,7 @@
 					<p>Cet exemple de page montre comment le menu de la section (à gauche) est affiché et configuré.</p>
                     <h2>Mise en oeuvre</h2>
                     <p>Afin d'implémenter un menu de section, quelques modifications sont nécessaires.</p>
-                    <p>Dans la section <b>top</b>, vous devez définir le paramètre « topSecMenu » sur true.</p>
+                    <p>Dans la section <code>top</code>, vous devez définir le paramètre <code>topSecMenu: true</code>.</p>
                     <pre>
 defTop.outerHTML = wet.builder.top({
 ...
@@ -72,8 +72,8 @@ defTop.outerHTML = wet.builder.top({
                     </pre>
                      <p>Ajoutez deux <code>&lt;div&gt;</code> non fermés après le code ci-dessus et juste avant l'élément d'ouverture <code>&lt;main&gt;</code>.</p>
                     <ul>
-                        <li>Le premier <code>&lt;div&gt;</code> doit avoir une classe nommée "container"</li>
-                        <li>La deuxième <code>&lt;div&gt;</code> doit avoir une classe nommée "row"</li>
+                        <li>Le premier <code>&lt;div&gt;</code> doit avoir une classe nommée <code>container</code></li>
+                        <li>La deuxième <code>&lt;div&gt;</code> doit avoir une classe nommée <code>row</code></li>
                     </ul>
                     <p>Après avoir fermé l'élément <code>&lt;main&gt;</code> vous devrez ajouter un élément <code>&lt;nav&gt;</code> qui devrait contenir votre code de secours statique.</p>
                     <p>Après cela viendra le menu de la section réelle. Il existe quelques options de configuration.</p>
