--- a/public/gcweb/samples/settings-fr.html
+++ b/public/gcweb/samples/settings-fr.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>settings-fr</title>
+		<title>Exemple SGDC - Bouton Paramètres</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="La Boîte à outils de l’expérience Web (BOEW) rassemble différents composants réutilisables et prêts-à-utiliser pour la conception et la mise à jour de sites Web innovateurs qui sont à la fois accessibles, conviviaux et interopérables. Tous ces composants réutilisables sont des logiciels libres mis à la disposition des ministères et des collectivités Web externes.">
@@ -57,7 +57,7 @@
 			<h1 property="name" id="wb-cont">Bouton Paramètres</h1>
 			<p>Cet exemple de page démontrera comment implémenter un bouton de paramètres.</p>
             <h2>Mise en oeuvre</h2>
-            <p>Le bouton des paramètres est ajouté dans la section <b>appTop</b> de la page.</p>
+            <p>Le bouton des paramètres est ajouté dans la section <code>appTop</code> de la page.</p>
             <p>Vous pouvez fournir l'URL vers laquelle vous souhaitez rediriger l'utilisateur via le paramètre <code>href</code>.</p>
             <pre>
 defTop.outerHTML = wet.builder.appTop({
