--- a/public/gcweb/samples/transactional-en.html
+++ b/public/gcweb/samples/transactional-en.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>Content page - Canada.ca</title>
+		<title>CDTS Sample - Transactional Page</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
@@ -61,10 +61,10 @@
 			<h1 property="name" id="wb-cont">Transactional Page</h1>
             <p>A transactional page is to be used under specific scenarios. Treasury Board defines this as follows:</p>
             <p><i>Users are engaged in a transactional process where allowing them to navigate away from the current page would interrupt the intended flow and result in errors, loss of data or accidental termination of the session</i></p>
-			<p>Basically, you avoid having external links to prevent users from losing data if they was to navgiate away.</p>
+			<p>Basically, you avoid having external links to prevent users from losing data if they was to navigate away.</p>
             <h2>Implementation</h2>
             <p>There are a few modifications required in order to make your page truly transactional. All of these changes are mandatory unless stated otherwise.</p>
-            <p>In the <b>top</b> section:</p>
+            <p>In the <code>top</code> section:</p>
             <ul>
                 <li>Hide the search bar</li>
                 <pre>
@@ -93,7 +93,7 @@ defTop.outerHTML = wet.builder.top({
 ...
 });
                 </pre>
-                <li>Hide the content inserted into the pre content space of your page</li>
+                <li>Hide the content inserted into the pre-content space of your page</li>
                 <pre>
 defTop.outerHTML = wet.builder.top({
 ...
@@ -102,7 +102,7 @@ defTop.outerHTML = wet.builder.top({
 });
                 </pre>
             </ul>
-            <p>In the <b>preFooter</b> section:</p>
+            <p>In the <code>preFooter</code> section:</p>
             <ul>
                 <li>Hide the content inserted into the post content space of your page</li>
                 <pre>
@@ -129,7 +129,7 @@ defPreFooter.outerHTML = wet.builder.preFooter({
 });
                 </pre>
             </ul>
-            <p>In the <b>footer</b> section:</p>
+            <p>In the <code>footer</code> section:</p>
             <p><b>Note:</b> To see all the features for the footer, please visit the footer sample page <a href="footer-en.html">here</a>.</p>
             <ul>
                 <li>Hide the content inside the footer</li>
@@ -140,7 +140,7 @@ defPreFooter.outerHTML = wet.builder.preFooter({
     ...
     });
                 </pre>
-                <li>Optional: Override the 'Terms and Conditions' link and the 'Privacy' located at the bottom of the page. An optional newWindow parameter can be set to true if you would like the link to open in a new window.</li>
+                <li>Optional: Override the 'Terms and Conditions' link and the 'Privacy' located at the bottom of the page. An optional <code>newWindow</code> parameter can be set to true if you would like the link to open in a new window.</li>
                 <li>Terms and conditions link</li>
                 <pre>
 defFooter.outerHTML = wet.builder.footer({
